Cache brand code on Windows.

Querying the registry is expensive and contributes to start up time,
omnibox query time and idle. Since the brand code is not expected to
change on Windows during the course of a session, this CL caches
the value, so that future queries are free.

This should restore the Omnibox perf that regressed by
https://chromium-review.googlesource.com/c/chromium/src/+/824363
and also improve perf elsewhere since the caching is now done at
a lower level than that change. Since this is expensive only on
Windows, the caching is done in the Windows codepath only.

Bug: 816698, 806130
Change-Id: I458fad29f18b1b1ff2d55b9334ae733fa448eec9
Reviewed-on: https://chromium-review.googlesource.com/947522
Commit-Queue: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541009}
Former-commit-id: 9dd1ef42a8a33c5ba09ec645150f580724979b36